In Qt 6.8, the base compilation units are re-used between engines. Qt Design Studio employs multiple QML engines. Under certain circumstances we can get multiple QML types compiled from the same QML document this way, which creates an inconsistent type hierarchy and leads to errors such as:
file:///app/share/qtcreator/qmldesigner/toolbar/MenuItemDelegate.qml:12:5: Unable to assign TopToolbarButtonStyle_QMLTYPE_26 to ControlStyle_QMLTYPE_3
- resulted in
-
QTBUG-135448 [REG: 6.8.2 → 6.8.3] Behavior or QQmlEngine::clearComponentCache changed in Qt 6.8.3
-
- Closed
-